fixed alignment

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ main img {
 .group {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .item {
@@ -87,7 +88,8 @@ header nav ul li a:hover {
 }
 
 /* -------  Join Form ------- */
-form {
+form {  
+      
   border: 2px solid #6b1a22;
   padding: 10px;
   display: flex;
